--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz dbmll</title>
+    <title>Quiz pour dimby</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -77,7 +77,7 @@
             <button id="french">Français</button>
         </div>
         <h1>Quiz</h1>
-        <div id="quiz culture pour Dimby"></div>
+        <div id="quiz"></div>
         <button id="submit">Invia Risposte</button>
         <div id="results"></div>
     </div>
