--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            transition: background-color 0.3s;
         }
 
         button:hover {
@@ -334,7 +335,14 @@
                     }
                 });
 
-                $('#results').html('Hai risposto correttamente a ' + score + ' su ' + questions[currentLanguage].length + ' domande.');
+                const totalQuestions = questions[currentLanguage].length;
+                const resultMessage = `Hai risposto correttamente a ${score} su ${totalQuestions} domande.`;
+                
+                // Mostra il risultato in un alert
+                alert(resultMessage);
+                
+                // Mostra il risultato anche nella pagina
+                $('#results').html(resultMessage);
             });
         });
     </script>
