--- a/home1.html
+++ b/home1.html
@@ -8,7 +8,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(to right, #ff6f61, #d3a625);
-            color: #fff;
+            color: #FFE4C4;
             text-align: center;
             margin: 0;
             padding: 0;
