--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         #quiz-container {
-            background-color: #fff;
+            background-color: #8B0000;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
