--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         #quiz-container {
-            background-color: #8B0000;
+            background-color: #fff;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -29,7 +29,7 @@
 
         #quiz-container h1 {
             margin-bottom: 20px;
-            color: #007bff;
+            color: #8B0000;
         }
 
         .question {
