--- a/fleurs_pour_dimby.html
+++ b/fleurs_pour_dimby.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pour ma chère Dimbisoa</title>
+    <title>Pour ma chérie Dimbisoa</title>
     <style>
         body {
             margin: 0;
@@ -106,7 +106,7 @@
     </style>
 </head>
 <body>
-    <h1>Pour ma chère Dimbisoa</h1>
+    <h1>Pour ma chérie Dimbisoa</h1>
     <div class="stem">
         <div class="leaf leaf-left"></div>
         <div class="leaf leaf-right"></div>
